--- a/documentation/readme.nt
+++ b/documentation/readme.nt
@@ -80,7 +80,7 @@ The library is available as a package on NuGet: [NetArchTest.eNhancedEdition](ht
 
 The fluent API should direct you in building up a rule, based on a combination of [predicates](documentation/api.md#predicate), [conditions](documentation/api.md#condition) and conjunctions. 
 
-The starting point for any rule is the static [`Types`](documentation/api.md#types) class, where you load a set of types from an assembly, domain or path.
+The starting point for any rule is one of the static methods on [`Types`](documentation/api.md#types) class, where you load a set of types from an assembly, domain or path.
 
 ```csharp
 var types = Types.InAssembly(typeof(MyClass).Assembly);
@@ -106,6 +106,8 @@ var isValid = result.IsSuccessful;
 var types = result.FailingTypes;
 ```
 
+> **Tip**
+Loading types is time time-consuming, since `Type` class is immutable, it can be shared between tests.
 
 ## Rules for dependency analysis
 
